--- a/app/globals.css
+++ b/app/globals.css
@@ -13,13 +13,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  overflow: hidden;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 html {
-  overflow: hidden;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 * {
